--- a/Learning-Content-Models/Learning-Content-Models/Views/Shared/_Layout.cshtml
+++ b/Learning-Content-Models/Learning-Content-Models/Views/Shared/_Layout.cshtml
@@ -23,13 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="StudyMaterials" asp-action="Index">StudyMaterial</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="StudyMaterials" asp-action="Index">StudyMaterials</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vid" asp-action="Index">Vidove</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TypeFile" asp-action="Index">TypeFile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
