--- a/Learning-Content-Models/Learning-Content-Models/Views/TypeFile/Edit.cshtml
+++ b/Learning-Content-Models/Learning-Content-Models/Views/TypeFile/Edit.cshtml
@@ -1,11 +1,10 @@
-﻿@model Learning_Content_Models.Models.Vid
-
+﻿@model Learning_Content_Models.Models.TypeFile
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h2>Create Vid</h2>
-<form method="post" asp-action="Add" asp-controller="Vid">
+<h2>Edit TypeFile</h2>
+<form method="post" asp-action="Edit" asp-controller="TypeFile">
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
@@ -16,5 +15,5 @@
                class="form-control" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary">Update</button>
 </form>
